2014-02-27 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
	* New step-by-step example: PKCS#10 CSR

2014-02-25 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
	* Major rewrite of TLS engine (using automata)
	* Remove several programs to limit the number of targets
	* New library: crypto, to factor some code
	* Issue #6: Document the repo layout in README.md
	* Issue #20: Remove Lwt from most of the libs (only the
	  ssl libs and some progs still use Lwt)

2014-02-17 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
	* First implementation of gzip_container
	* New PTypes: (rtol_)bit_magic

2014-02-12 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
	* Issue #15: Add string_input_of_stdin
	* Issue #13: Debug feature: handle name in containers
	* Issue #18 and #19: Add README and INSTALL files
	* First unit tests for the preprocessor
	* Remove Lwt as a specific input type

2014-01-22 Pierre Chifflier <pierre.chifflier@ssi.gouv.fr>
	* Various bugfixes/enhancements
	* PE support improvements
	* First description of UEFI Volume formats

2014-01-21 Florian Maury <florian.maury@ssi.gouv.fr>
	* First description of OpenPGP messages

2014-01-20 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
	* New helper in core: string_input_of_stdin

2014-01-20 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
	* Issue 14: Improve debug info on parsing errors
	  (the name used for a container is now the name of
	  the struct field or the PType [union/alias])

2014-01-15 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
	* Issue 11: Allow for more flexible enum patterns
          (multiple and range patterns)

2014-01-11 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
	* Initial Changelog